# gmail-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
gmail_mgr/: auth.py  cli.py  config.py  messages.py  subs.py  unsubscribe.py  web.py
gmail_mgr/static/: index.html
